crates/deadline-cli/tests/cli/snapshots/cli__config__config_clear_no_dot_setting_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli/config.rs
info:
  program: deadline
  args:
    - config
    - clear
    - bad_name
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61567"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61567"
    AWS_ENDPOINT_URL_S3: "http://localhost:61567"
    AWS_ENDPOINT_URL_STS: "http://localhost:61567"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpL3y6JZ/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpL3y6JZ
---
success: false
exit_code: 1
----- stdout -----
The setting name 'bad_name' is not valid.

----- stderr -----
